--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "service:start": "node start.js",
     "service:stop": "node stop.js",
     "offline": "serverless offline start",
-    "test": "npm run service:start && jest && npm run service:stop"
+    "test": "npm run service:start && jest && npm run service:stop",
+    "test-ci": "./startOffline && jest && ./stopOffline"
   },
   "author": "",
   "license": "ISC",
