--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     executor:
       name: node/default
-      tag: '14.x'
+      tag: '14'
     steps:
       - checkout
       - node/with-cache:
