--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,6 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: npm install -g serverless
+            - run: npm install serverless
             - run: npm install
       - run: npm run test-ci
