--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,12 +17,14 @@ jobs:
           environment:
             DOCKERIZE_VERSION: v0.3.0
       - run:
-          command: npx serverless offline
+          command: bash ./startOffline.sh
       - run:
           name: Wait for serverless offline
           command: dockerize -wait tcp://localhost:3000 -timeout 5m
       - run:
           command: jest
+      - run:
+          command: bash ./stopOffline.sh
 
 workflows:
   test:
