--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@4.3.0
 jobs:
-  test:
+  test_deploy_dev:
     executor:
       name: node/default
       tag: "14.14"
@@ -25,8 +25,12 @@ jobs:
           command: jest
       - run:
           command: bash ./stopOffline.sh
+      - run: 
+          command: npx serverless config credentials --provider aws --key AWS_KEY --secret AWS_SECRET
+      - run: 
+          command: npx serverless deploy
 
 workflows:
   test:
     jobs:
-      - test
+      - test_deploy_dev
