--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,8 @@ jobs:
           environment:
             DOCKERIZE_VERSION: v0.3.0
       - run:
-          command: bash ./startOffline.sh
+          command: npx serverless offline
+          background: true
       - run:
           name: Wait for serverless offline
           command: dockerize -wait tcp://localhost:3000 -timeout 5m
