--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,7 @@ machine:
   environment:
     _JAVA_OPTIONS: "-Xms512m -Xmx1024m"
   java:
-    version: openjdk7
-  post:
-    - curl -k -L -o dynamodb-local.tgz http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.tar.gz
-    - tar -xzf dynamodb-local.tgz
-    - command: java -Djava.library.path=./DynamoDBLocal_lib -jar DynamoDBLocal.jar -sharedDb -port 8000
-      background: true
+    version: openjdk7 
 orbs:
   node: circleci/node@4.3.0
   aws-cli: circleci/aws-cli@2.0.0
@@ -38,7 +33,7 @@ jobs:
           environment:
             DOCKERIZE_VERSION: v0.3.0
       - run:
-          command: npx serverless offline
+          command: npx serverless offline start
           background: true
       - run:
           shell: /bin/sh
