--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,12 @@ jobs:
       image: ubuntu-2004:202010-01
     steps:
       - checkout
+      - aws-cli/install
       - node/install-packages
       - run: 
           name: install java
           command: |
-              apt-get update && apt-get install default-jre default-jdk
+              sudo apt-get update && apt-get install default-jre default-jdk
       - run:
           command: npx serverless config credentials --provider aws --key AWS_KEY --secret AWS_SECRET --profile default
       - run:
