--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - run: 
           name: install java
           command: |
-              sudo apt-get update && apt-get install default-jre default-jdk
+              sudo apt-get update && sudo apt-get install default-jre default-jdk
       - run:
           command: npx serverless config credentials --provider aws --key AWS_KEY --secret AWS_SECRET --profile default
       - run:
